--- a/css/style.developement.css
+++ b/css/style.developement.css
@@ -1,13 +1,30 @@
 @charset "UTF-8";
 /* CSS Document */
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/*==========
+Table of Contents
+1. Imported Fonts
+2. CSS Variables
+3. HTML Default Style Overwrites
+4. Body
+5. Components
+    5.1 Standrard
+    5.2 Interactive
+    5.3 Forms
+6. Header
+    6.1 Nav
+    6.2 Intro
+7. Main Content
+    7.1 About / Skills
+    7.2 Projects
+    7.3 Contact
+8. Footer
+9. Media Queries
+==========*/
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
+/*==========1. Imported Fonts==========*/
+@import url("https://use.typekit.net/mgp3qmv.css");
+/*==========2. CSS Variables==========*/
 :root {
 /*---Standard Colors---*/
     
@@ -28,125 +45,83 @@
     
     
 /*---Standard Font Styling---*/
-    --primary-font:"Montserrat", Raleway, san-serif;
+    --primary-font:"Aaux Next", san-serif;
 
     --primary-font-size: 16px;
     --light-font: 100;
     --medium-font: 400;
     --blod-font: 700;
 }
-
-*, html {
+/*==========3. HTML Default Style Overwrites==========*/
+*, 
+html {
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
 }
-
+/*==========4. Body==========*/
 body {
-    position: relative;
-    font-family: var(--secondary-font);
-    font-weight: 250;
+    font-family: var(--primary-font);
+    font-weight: var(--light-font);
     font-size: var(--primary-font-size);
     line-height: 1.6;
     display: flex;
     letter-spacing: .1rem;
     flex-direction: column;
     min-height: 100vh;
-    background-color: var(--gray8);
-}
-.page-header{
-    text-transform: uppercase;
-    background: url("../imgs/hadley-jin-DafoTjqtykQ-unsplash.jpg") no-repeat center / cover;
-    min-height: 100vh;
-    position: relative;
-    z-index: 0;
-}
-.logo{
-    margin-right: auto;
-    width: 120px;
-    padding: 1rem;
-}
-.nav-links{
-    list-style: none;
-}
-.nav-links li, .nav-links a{
-    display: inline-block;
-    color: var(--gray1);
-    margin-right: 1em; 
-    font-size: .9rem;
-}
-.nav-container{
-    width: 100vw;
-    margin: auto;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: .5rem 1.5rem;
-    position: relative;
-}
-.nav-container:after{
-    content:"";
-    width: 50vw;
-    height: 1px;
-    background: linear-gradient(0.25turn, rgba(0,0,0,.0),rgba(0,0,0,.5), rgba(0,0,0,.0));
-    position: absolute;
-    bottom: 0;
-    left: 25%;
-}
-.intro-container{
-    width: 50vw;
-    height: 50vh;
-    margin: 6rem auto;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 1.5rem;
-    justify-content: flex-end;
-    align-items: center;
-    color: var(--gray1);
-}
-.intro-container h1{
-  font-size: 4rem;
-    margin: 4rem 0px 0px 0px
-}
-.darken{
-    width:100vw;
-    height: 100vh;
-    background-color: rgba(0,0,0,.1)
+    background-color: white;
 }
 
-h1 {
-    font-size: 2rem;
-    font-weight: 700;
+/*==========5. Components==========*/
+    /*=====5.1 Standard Components=====*/
+h1,h2,h3,h4,h5,h6 {
+    font-weight: var(--light-font);
     font-family: var(--primary-font);
+    color: var(--gray1);
+}
+h1{
+    font-size: 2rem;
 }
 
 h2 {
     font-size: 1.6rem;
-    font-weight: 700;
-    font-family: var(--primary-font);
 }
 
 h3 {
     font-size: 1.2rem;
-    font-weight: 700;
-    font-family: var(--primary-font);
 }
-
+p {
+    fon-weight: 100;
+    color: var(--gray2);
+}
+    /*=====5.2 Interactive Components=====*/
+.nav-links a{
+    color: var(--gray1);
+    margin-right: 1em; 
+    transition: all 300ms;
+}
 a{
     color: var(--accent-color1);
     text-decoration: none;
     transition: all 300ms;
     font-family: var(--primary-font);
-    font-weight: var(--medium-font);
+    font-weight: var(--light-font);
     letter-spacing: normal;
 }
-
+.social-media {
+    display: flex; 
+    flex-direction: row;
+}
+.social-media a{
+    margin: 0 2rem 0 0;
+    transition: all 300ms;
+}
+.social-media a:last-child{
+    margin-right: 0px;
+}
 a:visted {
     color: #05676e;
 }
-
-a:hover, a:focus {
-    opacity: .5;
-}
-
 button,
 .button,
 .submit
@@ -157,86 +132,147 @@ button,
     font-family: var(--primary-font);
     color: var(--gray8);
     background-color: var(--accent-color1);
-    font-size: 1rem; 
     padding: .5em 1em;
-    border-radius: 1em;
-    transition: opacity 250ms ease;
-    font-weight: 400;
+    border-radius: .2em;
+    font-weight: var(--light-font);
     letter-spacing: normal;
-    
+    transition: all 300ms;
 }
-
-
-
 button:hover,
 button:focus,
+a:hover,
+a:focus,
+.nav-links li:hover,
+.nav-links li:focus,
 .button:hover,
 .button:focus,
 .submit:hover,
-.submit:focus
-.nav-links li:last-child:hover,
-.nav-links li:last-child:focus{
-    opacity: .8;
+.submit:focus{
     cursor: pointer;
     text-decoration: none;
+    transform: scale(1.05);
+}
+.social-media a:hover,
+.social-media a:focus{
+    transform: scale(1.2);
+}
+a:active{
+    
+}
+
+    /*=====5.3 Forms=====*/
+label {
+    color: var(-gray)
+} 
+input, 
+textarea{
+    display: block;
+    width: 100%;
+    border: none;
+    border-radius: .3rem;
+    background-color: var(--gray6); 
+}
+[placeholder]{
+    padding: 0 .5rem;
     color: var(--gray8);
+    font-weight: var(--light-font)
 }
-
-main{
-    flex: 1 0 auto;
-    background-color: var(--gray7);
+.input{
+    height: 2rem;
 }
-
-.profile {
-    width: 90%;
+.submit {
+    display: block;
+    width: 75%;
+    margin: 1rem auto; 
+    margin-bottom: 4rem;
+    
+}
+/*==========6. Header==========*/
+.page-header{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem auto;
+    justify-content: space-between;
+    position: relative;
+    padding: .5rem 1.5rem;
+    box-shadow: 0 1px 3px var(--gray4);
 }
-
-.profile__content{
-    background-color: var(--gray1);
-    color: var(--gray8);
-}
-
-
-.profile__item-left{
-    width: 33%;
-    height: 350px;
-    background: url("../imgs/profile-image.jpg") no-repeat center / cover;
-    border-radius: .3rem;
-}
-.profile__item-right {
-    width: 50%;
-    margin: -1rem;
-    border-radius: .3rem;
+    /*=====6.1) Nav=====*/
+.logo{
+    margin-right: auto;
+    width: 110px;
     padding: 1rem;
 }
 
-.profile__item-right h2 {
-    letter-spacing: .1rem;
-    margin-top: 0;
+.nav-links{
+    list-style: none;
 }
-
-
-.about-me__section {
-    text-align: center;
-    clear: both;
+.nav-links li {
+    display: inline-block;
+    transition: all 300ms;
 }
-
-.about-me__hobbies {
+     /*=====6.2) Intro=====*/
+.intro-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1.5rem;
+    color: var(--gray3);
+    text-transform: uppercase;
+}
+.intro-container h1{
+    font-size: 4rem;
+    margin: 4rem 0px 1.5rem 0px;
+    font-weight: 350;
+    letter-spacing: 1rem;
+}
+.intro-container h2{
+    font-size: 2rem;
+    font-weight: 300;
+    margin: 0;
+    letter-spacing: .5rem;
+}
+.intro-container a {
+    margin-bottom: 4rem;
+}
+/*==========7. Main==========*/
+main{
+    flex: 1 0 auto;
+}
+    /*=====7.1 About / Skills=====*/
+.about {
+    display: flex;
+    padding: 2rem;
+}
+.about__item{
+    width: 50%;
+    padding: 2rem;
+}
+.about__image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+}
+.about img {
+    width: 100%;
+}
+.about__content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.about__hobbies {
     list-style-type: none;
     padding: 0px;
 }
-
-/*---Layout for browsers that do not support CCS Grid*/
+    /*=====7.2 Projects=====*/
+/*Layout for browsers that do not support CCS Grid*/
 .projects-grid__item {
     display: inline-block; 
     width: 33%;
 }
-
-/*---Layout for browsers that do support CCS Grid*/
+/*Layout for browsers that do support CCS Grid*/
 @supports (display: grid) {
     .projects-grid {
         display: grid;
@@ -246,7 +282,6 @@ main{
         color: var(--gray1);
         text-align: center;
     }
-
     .projects-grid__item {
         background-color: var(--gray8);
         padding: 10px;
@@ -255,7 +290,6 @@ main{
         margin: 0;
         border-radius: 10px;
     }
-
     .projects-grid__item:first-child {
         grid-column: auto / auto;
         grid-row: auto / auto;
@@ -266,7 +300,7 @@ main{
           grid-row-end: 3;*/
     }
 }
-
+    /*=====7.3 Contact=====*/
 .contact-section {
     width: 100%;
     margin: 1rem auto;
@@ -276,59 +310,36 @@ main{
     width: 50%;
     margin: 0 auto;
 }
-
-label, input, textarea {
-    display: block;
-    width: 100%;
-    border: none;
-    border-radius: .3rem;
-}
-
-.input{
-    height: 2rem;
-}
-
-.submit {
-    display: block;
-    width: auto;
-    margin: 1rem auto; 
-    margin-bottom: 4rem;
-    
-}
+/*==========8. Footer==========*/
 .page-footer {
-    color: var(--gray8);
-    background-color: var(--gray1);
     clear: both;
-    border-top: 5px solid var(--gray3); 
+    box-shadow: 0 1px 3px var(--gray2); 
     padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
 }
-
-.social-media {
-    width: 15%;
-    display: flex; 
-    flex-direction: row;
-    justify-content: space-around
-}
-
-
-
-
-/*----animations----*/
-
-
-
-
-/*----media queries----*/
+/*==========9. Media Queries==========*/
 
     /*Devices 500px or under */
 
 @media all and (max-width: 500px) {
     .projects-grid {
         grid-template-columns: 1fr;
+    }
+    .intro-container{
+        margin: 3rem auto;
+    } 
+    .intro-container h1{
+        font-size: 2rem;
+        margin: .5rem 0px 0px 0px
+    }
+    .intro-container p{
+        font-size: .7rem;
+    }
+     a{
+        font-size: .9rem;
     }
 }
 
@@ -338,7 +349,19 @@ label, input, textarea {
     .projects-grid {
         grid-template-columns: repeat(2, 1fr);
     }
- 
+    .intro-container{
+        margin: 2rem auto;
+    } 
+    .intro-container h1{
+        font-size: 3rem;
+        margin: .8rem 0px 0px 0px
+    }
+    .intro-container p{
+        font-size: .8rem;
+    }
+     a{
+        font-size: .9rem;
+    }
 }
 
     /*Devices 750px or under*/
@@ -353,6 +376,20 @@ label, input, textarea {
     }
     h1 {
         font-size: 1.6rem;
+    }
+    .nav-links li, .nav-links a{
+        font-size: .7rem;
+    }
+    button,
+    .button,
+    .submit
+     {
+        font-size: .7rem; 
+        font-weight: 400;
+    }
+    .contact-form {
+        width: 75%;
+        margin: 0 auto;
     }
 }
 
