Simple styling changes.

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 * Prefixed by https://autoprefixer.github.io
 * PostCSS: v7.0.29,
@@ -5,7 +6,7 @@
 * Browsers: last 4 version
 */
 
-@charset "UTF-8";
+
 /* CSS Document */
 
 /*==========
@@ -113,7 +114,7 @@ h3 {
     font-size: 1.2rem;
 }
 p {
-    fon-weight: 100;
+    font-weight: 100;
     color: #909090ff;
 }
     /*=====5.2 Interactive Components=====*/
@@ -152,7 +153,7 @@ a{
 .social-media a:last-child{
     margin-right: 0px;
 }
-a:visted {
+a:visited {
     color: #05676e;
 }
 button
@@ -231,7 +232,7 @@ a:active{
 
     /*=====5.3 Forms=====*/
 label {
-    color: var(-gray)
+    color: var(--gray4)
 } 
 input{
     display: block;
@@ -313,7 +314,7 @@ textarea{
 .intro-container h1{
     font-size: 4rem;
     margin: 4rem 0px 1.5rem 0px;
-    font-weight: 350;
+    font-weight: 400;
     letter-spacing: 1rem;
 }
 .intro-container h2{
