--- a/css/style.developement.css
+++ b/css/style.developement.css
@@ -13,7 +13,7 @@ Table of Contents
     5.3 Forms
 6. Header
     6.1 Nav
-    6.2 Intro
+    6.2 CTA
 7. Main Content
     7.1 About / Skills
     7.2 Projects
@@ -26,6 +26,7 @@ Table of Contents
 @import url("https://use.typekit.net/mgp3qmv.css");
 /*==========2. CSS Variables==========*/
 :root {
+    --nav-height: 72px;
 /*---Standard Colors---*/
     
     /*    Primary Colors    */
@@ -52,12 +53,13 @@ Table of Contents
     --medium-font: 400;
     --blod-font: 700;
 }
-/*==========3. HTML Default Style Overwrites==========*/
-*, 
-html {
+/*==========3. HTML Default Style Overwrites==========*/ 
+*{
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
+    padding: 0;
+    margin:0;
 }
 /*==========4. Body==========*/
 body {
@@ -70,28 +72,23 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background-color: white;
+    box-sizing: border-box;
 }
 
 /*==========5. Components==========*/
     /*=====5.1 Standard Components=====*/
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
     font-weight: var(--light-font);
     font-family: var(--primary-font);
     color: var(--gray1);
 }
-h1{
-    font-size: 2rem;
-}
-
-h2 {
-    font-size: 1.6rem;
-}
-
-h3 {
-    font-size: 1.2rem;
-}
 p {
-    fon-weight: 100;
+    font-weight: 100;
     color: var(--gray2);
 }
     /*=====5.2 Interactive Components=====*/
@@ -117,9 +114,9 @@ a{
     transition: all 300ms;
 }
 .social-media a:last-child{
-    margin-right: 0px;
+    margin-right: 0;
 }
-a:visted {
+a:visited {
     color: #05676e;
 }
 button,
@@ -160,23 +157,42 @@ a:focus,
 a:active{
     
 }
-
+.down-arrow{
+    width: 25px;
+    height: 25px;
+    border-left: 1px solid var(--gray1);
+    border-bottom: 1px solid var(--gray1);
+    transform: rotate(-45deg);
+    transition: all 300ms;
+    animation: 3s ease-in 1 fadein ;
+}
+@keyframes fadein {
+  from{ opacity: 0; 
+    }
+  to { opacity: 1;
+    }
+}
+.down-arrow:hover{
+    transform: rotate(-45deg);
+    
+}
     /*=====5.3 Forms=====*/
+.form-field{
+    margin: .5rem;
+}
 label {
-    color: var(-gray)
+    position: relative;
+    color: var(--gray2);
 } 
 input, 
 textarea{
-    display: block;
-    width: 100%;
     border: none;
     border-radius: .3rem;
     background-color: var(--gray6); 
 }
-[placeholder]{
-    padding: 0 .5rem;
-    color: var(--gray8);
-    font-weight: var(--light-font)
+input::placeholder,
+textarea::placeholder{
+    color: transparent;
 }
 .input{
     height: 2rem;
@@ -186,55 +202,84 @@ textarea{
     width: 75%;
     margin: 1rem auto; 
     margin-bottom: 4rem;
-    
 }
 /*==========6. Header==========*/
 .page-header{
+    height: 100vh;
     display: flex;
-    justify-content: space-between;
-    position: relative;
-    padding: .5rem 1.5rem;
-    box-shadow: 0 1px 3px var(--gray4);
+    align-items: center;
+    justify-content: center;
+    background-color: var(--gray5);
+    padding-top: var(--nav-height);
+}
+.u-centered{
+    width: 100%;
+    max-width: 1200px;
+    padding: 16px;
 }
     /*=====6.1) Nav=====*/
-.logo{
-    margin-right: auto;
-    width: 110px;
-    padding: 1rem;
-}
-
-.nav-links{
-    list-style: none;
-}
-.nav-links li {
-    display: inline-block;
-    transition: all 300ms;
-}
-     /*=====6.2) Intro=====*/
-.intro-container{
+.nav{
+    width: 100vw;
+    height: var(--nav-height);
+    position: fixed;
+    left: 0;
+    top:0;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding-bottom: 1.5rem;
-    color: var(--gray3);
-    text-transform: uppercase;
+    justify-content: space-between;
+    z-index: 1000;
+    box-shadow: 0 1px 3px var(--gray2); 
 }
-.intro-container h1{
-    font-size: 4rem;
-    margin: 4rem 0px 1.5rem 0px;
-    font-weight: 350;
-    letter-spacing: 1rem;
+.nav__items{
+    height: 100%;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.intro-container h2{
-    font-size: 2rem;
-    font-weight: 300;
-    margin: 0;
-    letter-spacing: .5rem;
+.nav__logo{
+    height: 25px;
 }
-.intro-container a {
-    margin-bottom: 4rem;
+.nav__mobile-icon-checkbox{
+    display: none;
 }
+.burger__line{
+    width: 20px;
+    height: 2px;
+    background-color: var(--gray1);
+    margin: 5px 0;
+    border-radius: 5px;
+}
+.nav__list{
+    list-style: none;
+    position: fixed;
+    right: 0;
+    top: var(--nav-height);
+    width: 100%;
+    height: calc(100vh - var(--nav-height));
+    background-color: var(--gray1);
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+.nav__list-item{
+    border-bottom: 1px solid var(--gray2);
+    padding: 1rem;
+    opacity: .5;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+}
+.nav__links{
+    font-weight: 200;
+    font-size: 1em;
+    color: var(--gray8);
+    letter-spacing: .5em;
+}
+.nav__mobile-icon-checkbox:checked ~ .nav__list{
+    display:flex;
+}
+     /*=====6.2) CTA=====*/
+
 /*==========7. Main==========*/
 main{
     flex: 1 0 auto;
@@ -265,7 +310,7 @@ main{
 }
 .about__hobbies {
     list-style-type: none;
-    padding: 0px;
+    padding: 0;
 }
     /*=====7.2 Projects=====*/
 /*Layout for browsers that do not support CCS Grid*/
@@ -279,7 +324,7 @@ main{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
-        margin: 0px;
+        margin: 0;
         color: var(--gray1);
         text-align: center;
     }
@@ -332,10 +377,6 @@ main{
     .intro-container{
         margin: 3rem auto;
     } 
-    .intro-container h1{
-        font-size: 2rem;
-        margin: .5rem 0px 0px 0px
-    }
     .intro-container p{
         font-size: .7rem;
     }
@@ -353,10 +394,6 @@ main{
     .intro-container{
         margin: 2rem auto;
     } 
-    .intro-container h1{
-        font-size: 3rem;
-        margin: .8rem 0px 0px 0px
-    }
     .intro-container p{
         font-size: .8rem;
     }
@@ -374,9 +411,6 @@ main{
     .projects-grid__item:first-child {
         grid-column: auto / auto;
         grid-row: auto / auto;
-    }
-    h1 {
-        font-size: 1.6rem;
     }
     .nav-links li, .nav-links a{
         font-size: .7rem;
